hw-7 add corrections

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -6,3 +6,21 @@ ul {
   margin: 0;
   padding-left: 0;
 }
+
+.list {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+button {
+  cursor: pointer;
+}
