--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,20 +1,24 @@
-@import "./utils/fonts";
-@import "./utils/variables";
-@import "./base/common";
-@import "./base/reset";
-@import "./base/hidden";
-@import "./components/markup";
-@import "./utils/mixine";
-@import "./utils/placeholder";
-@import "./layouts/header";
-@import "./components/logo";
-@import "./layouts/hero";
-@import "./layouts/modal";
-@import "./layouts/features";
-@import "./layouts/activities";
-@import "./layouts/team";
-@import "./components/social-media";
-@import "./layouts/clients";
-@import "./layouts/footer";
-@import "./layouts/btn-portfolio";
-@import "./layouts/portfolio";
+@import './utils/fonts';
+@import './utils/variables';
+@import './utils/hidden';
+@import './utils/mixine';
+@import './utils/placeholder';
+
+@import './base/common';
+@import './base/reset';
+
+@import './components/markup';
+@import './components/logo';
+@import './components/social-media';
+
+@import './layouts/header';
+@import './layouts/hero';
+@import './layouts/modal';
+@import './layouts/features';
+@import './layouts/activities';
+@import './layouts/team';
+@import './layouts/clients';
+@import './layouts/footer';
+
+@import './layouts/btn-portfolio';
+@import './layouts/portfolio';
