--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -93,11 +93,11 @@
 }
 
 .form-email__button {
-  display: flex;
-  align-items: center;
+  @include centeredFlex;
   margin-left: 12px;
   border-radius: 4px;
   padding: 10px 28px;
+  width: 200px;
   border: none;
 
   color: var(--white-text-color);
